Closed Bug 422926 Opened 17 years ago Closed 17 years ago

MSNBC Videos won't play

Categories

(Core Graveyard :: Plug-ins, defect, P1)

x86
Windows Vista

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9beta5

People

(Reporter: jmjjeffery, Assigned: jst)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

could be bug 406251
Component: General → Plug-ins
Product: Firefox → Core
QA Contact: general → plugins
Flags: blocking1.9?
Hmm, *really* shouldn't be bug 406251, I'd be surprised. I applied that patch to a tree from maybe two days ago, and the videos still play, so I'd look elsewhere.
FYI: Playing the videos is wfm with : Mozilla/5.0 (Windows; U; Windows NT 6.0; rv:1.9b5pre) Gecko/2008031400 SeaMonkey/2.0a1pre
having adblock plus installed and running makes this bug not appear (confuzed)
Is this related to a similar problem that appeared recently on youtube? Videos on youtube.com don't load for me (but if they are embedded in another site, I can play them usually); I can't always reproduce. I've seen this problem both with and without adblock enabled (no, I don't have flashblock installed either).
When I filed I was using Flash 9.0r47, I just tried the 9.0r115 update, and its the same, the vids still won't play, so it appears that this issue is not flash version related. Could someone verify my regression range, maybe I missed something ? I'm not a coder, so I can't begin to guess which patch caused this issue. Possible to back out all the patches in the range ? I know its time consuming due to the long build to verify times now on the win32 box, but can we let B5 slip out the door with this problem ? Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b5pre) Gecko/2008031701 Minefield/3.0b5pre Firefox/3.0 Firefox/2.0.0.12 ID:2008031701
When clicking on a vid link at www.msnbc.com a 'pop-up' window is spawned to play the vids. This morning after the window came up, I right-clicked in the window and used: 1. View page info 2. select the media tab 3. copy/paste the top listed url into a new tab in the browser 4. NOTE that the vids now play and work... no idea what this means... site issue ? or something with the pop-up ? Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b5pre) Gecko/2008031701 Minefield/3.0b5pre Firefox/3.0 Firefox/2.0.0.12 ID:2008031701
From another bug with Flash being broken with Flashblock installed, it appears that perhaps bug 401155 is the problem, could it be that bug 401155 is also the cause of this issue ? Both Flashblock/Flash problems and this one started at the same time.
Bug 401155 landed on the 14th, which is after the broken buildid in comment 0. It does work on a local build from right after my landing on windows XP. Looks like a blocker though. Is this Vista-only perhaps?
Assignee: nobody → jst
Flags: blocking1.9? → blocking1.9+
I do believe i'm having this same issue or a similar issue on Linux. I can't pull a regression range though...For me, embedded videos (such as the video at: http://daily.mahalo.com ) don't show up when i have AdBlock Plus on, but they do show up as soon as i turn it off (and no, i didn't select to block them). Also, i have no other extensions installed that could possibly be causing this issue (All i have installed other than ABP and ABP Element Hiding Helper is Fission and Better Gmail)
sorry...Also my flash version is 9.0 r115
That would sort of indicate that bug 401155 is the cause here...
Blocks: 420886
Attached patch Fix.Splinter Review
This makes is so that we don't do delayed stopping of plugins when we don't need to (aDelayedStop is false in StopPluginInternal()). I don't understand why this is a problem, but plugins apparently don't like this. This should also fix bug 423260 (can't test right now as the site appears to not work at the moment), and also bug 423446.
Attachment #310374 - Flags: superreview?(jonas)
Attachment #310374 - Flags: review?(jonas)
Blocks: 423260
Attachment #310374 - Flags: superreview?(jonas)
Attachment #310374 - Flags: superreview+
Attachment #310374 - Flags: review?(jonas)
Attachment #310374 - Flags: review+
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.9beta5
Comment on attachment 310374 [details] [diff] [review] Fix. This needs a beta, and would've landed last night if it wasn't for the network outage that held the tree closed most of the evening :(
Attachment #310374 - Flags: approval1.9?
Comment on attachment 310374 [details] [diff] [review] Fix. This is a blocker. No approval required.
Attachment #310374 - Flags: approval1.9?
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Confirmed, fixed in build: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b5pre) Gecko/2008031912 Minefield/3.0b5pre Firefox/3.0 Firefox/2.0.0.12 ID:2008031912 <-Latest hourly Vista HP SP1
I'll be able to test this myself tomorrow when the nightlies hit.
Want an automated test eventually, but until then a manual test would be an improvement over nothing...
Depends on: test-plugin
Flags: in-testsuite?
Flags: in-litmus?
https://litmus.mozilla.org/show_test.cgi?id=5233 added which covers testing of several news sites, including msnbc.
Flags: in-litmus? → in-litmus+
-#ifdef XP_WIN - // We only deal with delayed stopping of plugins on Win32 for now, - // as that's the only platform where we need to (AFAIK) and it's - // unclear how safe widget parenting is on other platforms. - if (aDelayedStop) { - // nsStopPluginRunnable will hold a strong reference to owner - // (mInstanceOwner), and thus keep it alive as long as it needs - // it. - nsCOMPtr<nsIRunnable> evt = new nsStopPluginRunnable(owner); - NS_DispatchToCurrentThread(evt); - } else -#endif - { - DoStopPlugin(owner, PR_FALSE); - } + DoStopPlugin(owner, aDelayedStop); Probably I'm just too unexperienced but to me it looks like on every platform the stopping of plugins is delayed and from the comment in the code "it's unclear how safe widget parenting is on other platforms" other than windows.
Depends on: 430802
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: