Fixing bug 422926 (and also bugs 420886 and 423260). Don't do delayed stops of plugins unless we're deleting the frame, as some plugins apparently can't handle that. r+sr=jonas@sicking.cc